--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Holy Grail</title>
+    <title>Me</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="header">
-      MY AWESOME WEBSITE
+      <img src="">
+      <div class="headone">
+        <div>This Website is awesome</div>
+        <div class="secondary">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</div>
+        <button>Sign Up</button>
+      </div>
     </div>
 
 
