--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   </head>
   <body>
     <div class="header">
-      <img src="">
+        <div class="top">
+            <img src="images/dog.jpg">
+            <a href="./pages/about.html">header link one</a>
+            <a href="./pages/about.html">header link two</a>
+            <a href="./pages/about.html">header link three</a>
+        </div>
       <div class="headone">
         <div>This Website is awesome</div>
         <div class="secondary">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</div>
