--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
   <body>
     <div class="header">
         <div class="top">
-            <img src="images/dog.jpg">
-            <a href="./pages/about.html">header link one</a>
-            <a href="./pages/about.html">header link two</a>
-            <a href="./pages/about.html">header link three</a>
+            <img class="logo" src="images/dog.jpg">
+            <div class="toplinks">
+                <a href="./pages/about.html">header link one</a>
+                <a href="./pages/about.html">header link two</a>
+                <a href="./pages/about.html">header link three</a>
+            </div>
         </div>
-      <div class="headone">
-        <div>This Website is awesome</div>
-        <div class="secondary">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</div>
-        <button>Sign Up</button>
-      </div>
+      <div class="headtwo"> 
+        <div class="headone">
+            <div>This Website is awesome</div>
+            <div class="secondary">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</div>
+            <button>Sign Up</button>
+        </div>
+        <img class="placeholder" src="images/dog.jpg">
+        </div> 
     </div>
 
 
