Modify top links location

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="header">
         <div class="top">
-            <img class="logo" src="images/dog.jpg">
+            <img class="logo" src="#" title="Header Logo">
             <div class="toplinks">
                 <a href="./pages/about.html">header link one</a>
                 <a href="./pages/about.html">header link two</a>
