Add second section

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="header">
         <div class="top">
             <img class="logo" src="#" title="Header Logo">
-            <div class="toplinks">
-                <a href="./pages/about.html">header link one</a>
-                <a href="./pages/about.html">header link two</a>
-                <a href="./pages/about.html">header link three</a>
-            </div>
+            <ul class="toplinks">
+                <li><a href="./pages/about.html">header link one</a></li>
+                <li><a href="./pages/about.html">header link two</a></li>
+                <li><a href="./pages/about.html">header link three</a></li>
+            </ul>
         </div>
       <div class="headtwo"> 
         <div class="headone">
@@ -25,6 +25,14 @@
         </div>
         <img class="placeholder" src="images/dog.jpg">
         </div> 
+    </div>
+    <div class="sectiontwo">
+        <div  class="twotitle">
+            Some Random Information
+        </div>
+        <div class="twocontent">
+            Test
+        </div>
     </div>
 
 
