--- a/index.html
+++ b/index.html
@@ -30,9 +30,19 @@
         <div  class="twotitle">
             Some Random Information
         </div>
-        <div class="twocontent">
-            Test
+        <div class="twobox">
+            <div class="twocontent"></div>
+            <div class="twocontent"></div>
+            <div class="twocontent"></div>
+            <div class="twocontent"></div>
         </div>
+        <div class="twobox">
+            <div class="twotext">text 1</div>
+            <div class="twotext">text 2</div>
+            <div class="twotext">text 3</div>
+            <div class="twotext">text 4</div>
+        </div>
+        
     </div>
 
 
