--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
             <div class="twotext">text 3</div>
             <div class="twotext">text 4</div>
         </div>
-        
+    </div>
+    <div class="sectionthree">
+      <div class="quote">This is an inspiring quote, or testimonial from a customer. Maybe just filling up space, or maybe people will acatually read it. Who knows? All I know is that it looks nice.</div>
+      <div class="subquote"> -Thor, God of Thunder</div>
     </div>
 
 
