--- a/index.html
+++ b/index.html
@@ -49,14 +49,16 @@
     </div>
 
     <div class="sectionfour">
-      <div>Call to action! It's Time!</div>
-      <div>Sign up for our product by clicking that button right over there!</div>
+      <div class="inlay">
+      <div class="fourhead">Call to action! It's Time!</div>
+      <div class="fourbody">Sign up for our product by clicking that button right over there!</div>
       <button>Sign Up</button>
+    </div>
     </div>
 
 
     <div class="footer">
-      The Odin Project ❤️
+      The Odin Project 2023
     </div>
   </body>
 </html>
