--- a/index.html
+++ b/index.html
@@ -50,10 +50,14 @@
 
     <div class="sectionfour">
       <div class="inlay">
-      <div class="fourhead">Call to action! It's Time!</div>
-      <div class="fourbody">Sign up for our product by clicking that button right over there!</div>
-      <button>Sign Up</button>
-    </div>
+        <div class="part1">
+          <div class="fourhead">Call to action! It's Time!</div>
+          <div class="fourbody">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <div class="part2">
+          <button>Sign Up</button>
+        </div>
+      </div>
     </div>
 
 
